--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "react-healess",
+  "name": "next-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start"
   },
   "dependencies": {
-    "bootstrap": "^4.6.0",
-    "isomorphic-unfetch": "^3.1.0",
-    "next": "9.5.5",
-    "react": "16.14.0",
-    "react-bootstrap": "^1.5.2",
-    "react-dom": "16.14.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14.11.10",
-    "@types/react": "^16.9.53",
-    "typescript": "^4.0.3"
+    "next": "10.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
